[build-system]
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioware-kaitai-formats"
version = "0.1.0"
description = "Kaitai Struct generated Python parsers for BioWare and KotOR wire formats."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL-3.0-or-later" }
dependencies = ["kaitaistruct>=0.11"]
keywords = ["bioware", "kaitai", "kaitai-struct", "kotor", "knights-of-the-old-republic", "parsing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/OpenKotOR/bioware-kaitai-formats"
Repository = "https://github.com/OpenKotOR/bioware-kaitai-formats.git"
Documentation = "https://github.com/OpenKotOR/PyKotor/wiki"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout>=2.4.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bioware_kaitai_formats*"]
