[build-system]
requires = ["setuptools>=42,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batchpatcher"
description = "A translator/font creator tool useful for patching/working with many files at once."
version = "2.2.1"
requires-python = ">=3.8"
dependencies = [
  "pykotor[encodings,font,updater]>=2.3.0",
  "arabic-reshaper>=3.0.0",
  "deep_translator>=1.11.4",
  "deepl-cli>=1",
  "notify-py>=0.3.43",
  "opencv-contrib-python>=4.8.0.76",
  "playwright>=1.40.0,<1.49.1; python_version==\"3.8\"",
  "playwright>=1.49.1,<2; python_version>=\"3.9\"",
  "pyquery>=2.0.1",
]
authors = [{ name = "Nick Hugi" }, { name = "th3w1zard1" }]
maintainers = [{ name = "th3w1zard1", email = "boden.crouch@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "LGPL-3.0-or-later" }
keywords = [
  "kotor",
  "kotor1",
  "kotor2",
  "tsl",
  "star-wars",
  "knights-of-the-old-republic",
  "batch",
  "translator",
  "font",
  "localization",
  "i18n",
  "pykotor",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
  "Topic :: Text Processing :: Linguistic",
  "Environment :: Console",
]

[project.scripts]
batchpatcher = "batchpatcher.__main__:main"

[project.urls]
Homepage = "https://github.com/OldRepublicDevs/PyKotor"
Documentation = "https://github.com/OldRepublicDevs/PyKotor/wiki"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"
Changelog = "https://github.com/OldRepublicDevs/PyKotor/releases"

# Poetry configuration
[tool.poetry]
name = "batchpatcher"
version = "2.2.1"
description = "A translator/font creator tool useful for patching/working with many files at once."
authors = ["Nick Hugi", "th3w1zard1 <boden.crouch@gmail.com>"]
maintainers = ["th3w1zard1 <boden.crouch@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
packages = [{ include = "batchpatcher", from = "src" }]
keywords = [
  "kotor",
  "kotor1",
  "kotor2",
  "tsl",
  "star-wars",
  "knights-of-the-old-republic",
  "batch",
  "translator",
  "font",
  "localization",
  "i18n",
  "pykotor",
]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = { version = "^2.3.0", extras = ["encodings", "font", "updater"] }
arabic-reshaper = ">=3.0.0"
deep_translator = ">=1.11.4"
deepl-cli = ">=1"
notify-py = ">=0.3.43"
opencv-contrib-python = ">=4.8.0.76"
playwright = [
  { version = ">=1.40.0,<1.49.1", markers = "python_version == \"3.8\"" },
  { version = ">=1.49.1,<2", markers = "python_version >= \"3.9\"" },
]
pyquery = ">=2.0.1"

[tool.poetry.scripts]
batchpatcher = "batchpatcher.__main__:main"

[tool.poetry.urls]
Homepage = "https://github.com/OldRepublicDevs/PyKotor"
Documentation = "https://github.com/OldRepublicDevs/PyKotor/wiki"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"
Changelog = "https://github.com/OldRepublicDevs/PyKotor/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyinstaller]
console = true
exclude-modules = [
  "PyQt5",
  "PyQt6",
  "PySide2",
  "PySide6",
  "PyOpenGL",
  "PyGLM",
  "dl_translate",
  "torch",
  "numpy",
]

[tool.dependencies]
playwright-browsers = ["chromium"]
windows-packages = ["comtypes", "pywin32"]
linux-profiles = ["tk"]
