[build-system]
requires = ["setuptools>=42,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holopatcher"
description = "A faster, cross-platform alternative to TSLPatcher written in Python."
version = "2.0.0a3"
requires-python = ">= 3.8"
dependencies = ["pykotor[encodings,updater]>=2.3.0"]
authors = [{ name = "NickHugi" }]
maintainers = [{ name = "th3w1zard1", email = "boden.crouch@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "LGPL-3.0-or-later" }
keywords = [
  "kotor",
  "kotor1",
  "kotor2",
  "tsl",
  "star-wars",
  "knights-of-the-old-republic",
  "modding",
  "patcher",
  "installer",
  "tslpatcher",
  "holopatcher",
  "pykotor",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
  "Topic :: Games/Entertainment :: Role-Playing",
  "Topic :: System :: Software Distribution",
  "Environment :: Console",
  "Environment :: X11 Applications :: Qt",
]

[project.scripts]
holopatcher = "holopatcher.__main__:main"

[project.urls]
Homepage = "https://deadlystream.com/files/file/2243-holopatcher/"
Documentation = "https://github.com/OldRepublicDevs/PyKotor/wiki/Installing-Mods-with-HoloPatcher"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"
Changelog = "https://github.com/OldRepublicDevs/PyKotor/releases"

# Poetry configuration
[tool.poetry]
name = "holopatcher"
description = "A faster, cross-platform alternative to TSLPatcher written in Python."
version = "2.0.0a3"
authors = ["NickHugi", "th3w1zard1 <boden.crouch@gmail.com>"]
maintainers = ["th3w1zard1 <boden.crouch@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
packages = [{ include = "holopatcher", from = "src" }]
keywords = [
  "kotor",
  "kotor1",
  "kotor2",
  "tsl",
  "star-wars",
  "knights-of-the-old-republic",
  "modding",
  "patcher",
  "installer",
  "tslpatcher",
  "holopatcher",
  "pykotor",
]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = { version = "^2.3.0", extras = ["encodings", "updater"] }

[tool.poetry.scripts]
holopatcher = "holopatcher.__main__:main"

[tool.poetry.urls]
Homepage = "https://deadlystream.com/files/file/2243-holopatcher/"
Documentation = "https://github.com/OldRepublicDevs/PyKotor/wiki/Installing-Mods-with-HoloPatcher"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"
Changelog = "https://github.com/OldRepublicDevs/PyKotor/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pyinstaller]
console = true
exclude-modules = [
  "numpy",
  "PyQt5",
  "PyQt6",
  "PySide2",
  "PySide6",
  "PIL",
  "matplotlib",
  "PyOpenGL",
  "PyGLM",
  "dl_translate",
  "torch",
]

[tool.dependencies]
linux-profiles = ["tk"]
